--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
           <div class="content-title">
             <img src="img/funtome_title.png" alt="">
           </div>
-          <div class="contetnt-cubtitle">
-            <p>сделай общение</p>
-            <p>ярче</p>
+          <div class="contetnt-subtitle">
+            <p class="text-subtitle">сделай общение</p>
+            <p class="text-red">ярче!</p>
           </div>
           <div class="content-text">Устанавливайте Funtome бесплатно и общайтесь, превращая обычный текст или целые
             фразы в оригинальные картинки.</div>
           <div class="but"></div>
         </div>
         <div class="intro-photo">
-          <img src="img/intro_photo.png" alt="">
+          <img class="intro-photo-size" src="img/intro_photo.svg" alt="">
         </div>
       </div>
     </div>
