--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="but"></div>
         </div>
         <div class="intro-photo">
-          <img class="intro-photo-size" src="img/intro_photo.svg" alt="">
+          <img class="intro-photo-size" src="img/intro_photo_group.png" alt="">
         </div>
       </div>
     </div>
