--- a/index.html
+++ b/index.html
@@ -76,13 +76,37 @@
           </div>
           <div class="content-text">Устанавливайте Funtome бесплатно и общайтесь, превращая обычный текст или целые
             фразы в оригинальные картинки.</div>
-          <div class="but"></div>
+          <div class="butt-instal">  
+            <a href="#" class="butt butt-green mr30">
+              <img src="img/butt/butt_app.png" alt="">
+            </a>
+            <a href="#" class="butt butt-green">
+              <img src="img/butt/butt_google.png" alt="">
+            </a>
+          </div>
+          
         </div>
         <div class="intro-photo">
           <img class="intro-photo-size" src="img/intro_photo_group.png" alt="">
         </div>
-      </div>
+      </div>      
+      
     </div>
+
+    <div class="icon-social">
+      <a href="#" class="icon-fixet">
+        <img src="img/icon/inst.png" alt="">
+      </a>
+      <a href="#" class="icon-fixet">
+        <img src="img/icon/facebook.png" alt="">
+      </a>
+      <a href="#" class="icon-fixet">
+        <img src="img/icon/vk.png" alt="">
+      </a>
+      <a href="#">
+        <img src="img/icon/youtube.png" alt="">
+      </a>
+    </div> 
 
     <div class="intro-banner">
       <img src="img/header-photo_desc.jpg" alt="">
