--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <title>Funtome</title>
   <meta name="description" content="Mobile product company" />
 
-  <link
-    href="https://fonts.googleapis.com/css?family=Comfortaa:400,700|Roboto:300,400&display=swap&subset=cyrillic,cyrillic-ext"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:300,400&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/media/media.css">
@@ -114,6 +112,40 @@
 
 
   </div>
+
+  <div class="slider">
+
+  </div>
+
+  <section class="video">
+    <img src="img/video_photo.jpg" alt="">
+  </section>
+
+  <div class="container-center">
+    <div class="title-instal">
+      <h3 class="text-instal">Онлайн мессенджер для Android и iOS устройств</h3>
+      <span class="arrow-next"></span>
+      <div class="header-instal">
+        <img class="sms-apple" src="img/icon/sms-apple.png" alt="" />
+        <img class="sms-google" src="img/icon/sms-google.png" alt="" />
+      </div>
+    </div>
+  </div>
+
+  <div class="container-center">
+    <div class="info-funtome">
+      <div class="title-info">О приложении</div>
+        <div class="text-info">
+          <p class="style-text">Funtome – это абсолютно новый бесплатный мессенджер, меняющий привычное представление об общении. Теперь делиться яркими и живыми эмоциями стало еще проще. Новый графический мессенджер Funtome поддерживает функцию переписки картинками.</p>
+          <p class="style-text">Графика вместо текста. Теперь можно выйти из тесных рамок смайлов и эмоджи и визуализировать все!</p> 
+          <p class="style-text">Скачивайте и общайтесь. Отправляйте новые картинки, получайте награды, удивляйте друзей и используйте своё воображение по максимуму!</p>
+        </div>
+    </div>  
+  </div>
+
+  <section class="info-photo">
+    <img class="info-photo-size" src="img/info_photo.jpg" alt="">
+  </section>
 
 
 </body>
