--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
           </div>
           <div class="content-text">Устанавливайте Funtome бесплатно и общайтесь, превращая обычный текст или целые
             фразы в оригинальные картинки.</div>
-          <div class="butt-instal">  
-            <a href="#" class="butt butt-green mr30">
+          <div class="butt-mobile">  
+            <a href="#" class="butt-instal butt-green mr30">
               <img src="img/butt/butt_app.png" alt="">
             </a>
-            <a href="#" class="butt butt-green">
+            <a href="#" class="butt-instal butt-green">
               <img src="img/butt/butt_google.png" alt="">
             </a>
           </div>
@@ -146,6 +146,69 @@
   <section class="info-photo">
     <img class="info-photo-size" src="img/info_photo.jpg" alt="">
   </section>
+
+  <div class="container-center">
+    <div class="detalis-text">
+      <div class="text">Подробнее в разделе </div>
+      <span class="arrow-next"></span>
+      <a href="#" class="butt butt-green">
+        <span class="butt-text">Особенности</span>
+      </a>
+    </div>
+
+    <div class="conditiuns">
+      <a href="#" class="style-conditions mr50">Условия пользования</a>
+      <a href="#" class="style-conditions">Политика конфиденциальности</a>
+    </div>
+  </div>
+
+  <footer>
+    <div class="footer">
+      <div class="container footer-container">
+
+        <div class="footer-funtome">
+          <div class="footer-icon mr25">
+            <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
+          </div>
+          <div class="funtome-text">Funtome Messenger</div>
+          <span class="arrow-next mr68"></span>
+          <div class="butt-mobile">  
+            <a href="#" class="butt-instal butt-green-border mr30">
+              <img src="img/butt/butt_app.png" alt="">
+            </a>
+            <a href="#" class="butt-instal butt-green-border">
+              <img src="img/butt/butt_google.png" alt="">
+            </a>
+          </div>
+        </div>
+
+        <div class="footer-contact">
+          <div class="copyright">2018-2019 UAB"FlowTech Pro"</div>
+          <div class="address">Лауру 36F, Вильнюс, Литва</div>
+          <div class="footer-contacts">
+            <a href="info@guntome.com" class="mail">info@guntome.com</a>
+          </div>
+        </div>
+
+        <div class="icon-social-footer">
+          <a href="#" class="mr30">
+            <img src="img/icon/inst.png" alt="">
+          </a>
+          <a href="#" class="mr30">
+            <img src="img/icon/facebook.png" alt="">
+          </a>
+          <a href="#" class="mr30">
+            <img src="img/icon/vk.png" alt="">
+          </a>
+          <a href="#">
+            <img src="img/icon/youtube.png" alt="">
+          </a>
+        </div>    
+        
+      </div>
+    </div>
+
+  </footer>
 
 
 </body>
