--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="intro-photo">
           <img class="intro-photo-size" src="img/intro_photo_group.png" alt="">
         </div>
-      </div>      
+      </div>
       
     </div>
 
@@ -110,12 +110,17 @@
       <img src="img/header-photo_desc.jpg" alt="">
     </div>
 
-
   </div>
 
-  <div class="slider">
-
-  </div>
+  <!-- <div class="slider">
+    <div class="container-center">
+      <div class="form-slider">
+        <img class="form-style" src="img/icon/form.svg" alt="">
+        
+       <img class="photo-style" src="img/mouse.png" alt="">
+      </div>
+    </div>  
+  </div> -->
 
   <section class="video">
     <img src="img/video_photo.jpg" alt="">
@@ -186,7 +191,7 @@
           <div class="copyright">2018-2019 UAB"FlowTech Pro"</div>
           <div class="address">Лауру 36F, Вильнюс, Литва</div>
           <div class="footer-contacts">
-            <a href="info@guntome.com" class="mail">info@guntome.com</a>
+            <a href="info@funtome.com" class="mail">info@funtome.com</a>
           </div>
         </div>
 
