--- a/index.html
+++ b/index.html
@@ -112,15 +112,31 @@
 
   </div>
 
-  <!-- <div class="slider">
+  <div class="slider">
     <div class="container-center">
+      
       <div class="form-slider">
         <img class="form-style" src="img/icon/form.svg" alt="">
-        
-       <img class="photo-style" src="img/mouse.png" alt="">
+        <img class="photo-style" src="img/mouse.png" alt="">
+        <div class="form-text">
+          <p class="text-first">Встречайте</p>
+          <p class="text-first green">анимированные</p>
+          <p class="text-first">паки Funtome!</p>
+        </div>
       </div>
+
+      <div class="form-slider">
+        <img class="form-style" src="img/icon/form.svg" alt="">
+        <img class="photo-style" src="img/mouse.png" alt="">
+        <div class="form-text">
+          <p class="text-first">Встречайте</p>
+          <p class="text-first green">анимированные</p>
+          <p class="text-first">паки Funtome!</p>
+        </div>
+      </div>
+
     </div>  
-  </div> -->
+  </div>
 
   <section class="video">
     <img src="img/video_photo.jpg" alt="">
