--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:300,400&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
 
+  <link rel="stylesheet" href="/js/owlCarousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="/js/owlCarousel/owl.theme.default.css">
+  
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/media/media.css">
   
@@ -117,21 +120,35 @@
       
       <div class="form-slider">
         <img class="form-style" src="img/icon/form.svg" alt="">
-        <img class="photo-style" src="img/mouse.png" alt="">
-        <div class="form-text">
-          <p class="text-first">Встречайте</p>
-          <p class="text-first green">анимированные</p>
-          <p class="text-first">паки Funtome!</p>
-        </div>
-      </div>
+        <div class="owl-slider-1">
+          <div id="slider_1" class="owl-carousel owl-theme-1">
+            <div class="slide">
+              <img class="photo-style" src="img/mouse.png" alt="">
+              <div class="form-text">
+                <p class="text-first">
+                  Встречайте <span class="green">анимированные</span> паки Funtome!
+                </p>
+              </div>
+            </div>
 
-      <div class="form-slider">
-        <img class="form-style" src="img/icon/form.svg" alt="">
-        <img class="photo-style" src="img/mouse.png" alt="">
-        <div class="form-text">
-          <p class="text-first">Встречайте</p>
-          <p class="text-first green">анимированные</p>
-          <p class="text-first">паки Funtome!</p>
+            <div class="slide">
+              <img class="photo-style" src="img/mouse.png" alt="">
+              <div class="form-text">
+                <p class="text-first">
+                  Встречайте <span class="green">анимированные</span> паки Funtome!
+                </p>
+              </div>
+            </div>
+    
+            <div class="slide">
+              <img class="photo-style" src="img/mouse.png" alt="">
+              <div class="form-text">
+                <p class="text-first">
+                  Встречайте <span class="green">анимированные</span> паки Funtome!
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -231,6 +248,23 @@
 
   </footer>
 
+
+<script src="/js/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="/js/owlCarousel/owl.carousel.min.js"></script>
+
+<script>
+  $(document).ready(function () {
+      $("#slider_1").owlCarousel({
+          'items': 1,
+          'loop': true,
+          // 'autoplay': true,
+          // 'autoplayTimeout': 3000,
+          'autoplayHoverPause': true,
+          'nav': true,
+      });
+  });
+</script>
 
 </body>
 
