--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       <div class="nav">
         <ul class="nav-list">
           <li class="link-home active">
-            <a href="#">главная</a>
+            <a href="index.html">главная</a>
           </li>
           <li class="link-features">
-            <a href="#">особенности</a>
+            <a href="funtome_features.html">особенности</a>
           </li>
           <li class="link-blog">
             <a href="#">блог</a>
@@ -53,8 +53,8 @@
       </div>
 
       <div class="header-instal">
-        <img class="instal-apple" src="img/icon/apple_icon.png" alt="" />
-        <img class="instal-google" src="img/icon/google_icon.png" alt="" />
+       <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt="" /></a> 
+       <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt="" /></a>
       </div>
 
 
@@ -164,8 +164,8 @@
       <h3 class="text-instal">Онлайн мессенджер для Android и iOS устройств</h3>
       <span class="arrow-next"></span>
       <div class="header-instal">
-        <img class="sms-apple" src="img/icon/sms-apple.png" alt="" />
-        <img class="sms-google" src="img/icon/sms-google.png" alt="" />
+        <a href="#"><img class="sms-apple" src="img/icon/sms-apple.png" alt="" /></a>
+        <a href="#"><img class="sms-google" src="img/icon/sms-google.png" alt="" /></a>
       </div>
     </div>
   </div>
