--- a/funtome_features.html
+++ b/funtome_features.html
@@ -110,24 +110,169 @@
 
     <!--- Features -->
     <div class="features-group">
-        <div class="container-center">
-            <div class="features-iteam-left">
+        <div class="container">
+
+             <!--- Text Left -->
+            <div class="features-iteam">
+                <div class="features-photo mr50">
+                    <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                </div> 
                 <div class="features-content">
-                    <div class="features-title"></div>
+                    <div class="features-title">
+                        <div class="number-photo">
+                            <img class="number" src="img/funtome-features/01.png" alt="">
+                        </div>
+                        <div class="title">Профиль</div>
+                    </div>
+                    <div class="features-text">
+                        <p>Профиль – это ваша территория! Здесь отображаются личные и статистические данные, а также настройки, чтобы ваше общение в Funtome было по-настоящему удобным. В профиле можно узнать свой баланс фанумов, посмотреть награды и уровни, установить фоны, выбрать язык и звуки отправки и получения сообщений.</p> 
+                    </div>
                 </div>
-                <div class="features-photo">
-                    <img src="img/funtome-features/features-photo.png" alt="">
-                </div>   
             </div>
 
-            <div class="features-iteam-richt">
-                <div class="features-content">
-                    <div class="features-title"></div>
+            <!--- Text Richt -->
+            <div class="features-iteam">
+                <div class="features-content mr50">
+                    <div class="features-title">
+                        <div class="number-photo">
+                            <img class="number" src="img/funtome-features/02.png" alt="">
+                        </div>
+                        <div class="title">Уровни и награды</div>
+                    </div>
+                    <div class="features-text">
+                        <p>Отправляйте новые картинки и получайте награды! За каждые 50 новых отправленных картинок вы переходите на следующий уровень и получаете фанумы и награды. Попробуйте сами!</p> 
+                    </div>
                 </div>
-                <div class="features-photo"></div>   
+                <div class="features-photo">
+                    <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                </div> 
             </div>
+
+            <!--- Text Left -->
+            <div class="features-iteam">
+                <div class="features-photo mr50">
+                    <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                </div> 
+                <div class="features-content">
+                    <div class="features-title">
+                        <div class="number-photo">
+                            <img class="number" src="img/funtome-features/03.png" alt="">
+                        </div>
+                        <div class="title">Фанумы</div>
+                    </div>
+                    <div class="features-text">
+                        <p>Funtome – это бесплатное приложение, где за каждые 50 отправленных картинок вы получаете фанумы. Фанумы – виртуальная валюта приложения, которую вы можете обменять на наши паки с картинками, дизайнерские фоныдля чатов, новые звуки отправки и получения сообщений.</p> 
+                    </div>
+                </div>
+            </div>
+
+            <!--- Text Richt -->
+            <div class="features-iteam">
+                <div class="features-content mr50">
+                    <div class="features-title">
+                        <div class="number-photo">
+                            <img class="number" src="img/funtome-features/04.png" alt="">
+                        </div>
+                        <div class="title">Паки</div>
+                    </div>
+                    <div class="features-text mb30">
+                        <p>Картинок много не бывает! Паки Funtome разнообразят ваше общение. Паки – это дополнительные наборы картинок на все случаи жизни. Обменивайте фанумы на паки и ПАКуйтесь на здоровье!</p> 
+                    </div>
+                    <div class="butt-group">
+                        <span class="arrow-next"></span>
+                        <a href="#" class="butt butt-green-border">
+                          <span class="butt-text-green">Подробнее</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="features-photo">
+                    <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                </div> 
+            </div>
+
+            <!--- Text Left -->
+            <div class="features-iteam">
+                <div class="features-photo mr50">
+                    <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                </div> 
+                <div class="features-content">
+                    <div class="features-title">
+                        <div class="number-photo">
+                            <img class="number" src="img/funtome-features/05.png" alt="">
+                        </div>
+                        <div class="title">Звуки</div>
+                    </div>
+                    <div class="features-text">
+                        <p>Почему уведомления должны приходить с одним и тем же звуком? В Funtome вы сами устанавливаете звуки, с которыми вы отправляете и получаете сообщения. Funtome также позволяет задать звук, с которым сообщение придет вашему собеседнику.</p> 
+                    </div>
+                </div>
+            </div>
+            
+            <!--- Text Richt -->
+            <div class="features-iteam">
+                <div class="features-content mr50">
+                    <div class="features-title">
+                        <div class="number-photo">
+                            <img class="number" src="img/funtome-features/06.png" alt="">
+                        </div>
+                        <div class="title">Коллажи</div>
+                    </div>
+                    <div class="features-text mb30">
+                        <p>С Funtome можно творить без границ! Вы можете создавать свои собственные коллажи из картинок Funtome. Выбирайте любые фоны, загружайте свои фотографии из галереи, добавляйте любимые картинки Funtome, cобирайте коллажи и отправляйте свои шедевры друзьям!</p> 
+                    </div>
+                </div>
+                <div class="features-photo">
+                    <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                </div> 
+            </div>
+
+            <!--- Text Left -->
+            <div class="features-iteam">
+                <div class="features-photo mr50">
+                    <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                </div> 
+                <div class="features-content">
+                    <div class="features-title">
+                        <div class="number-photo">
+                            <img class="number" src="img/funtome-features/07.png" alt="">
+                        </div>
+                        <div class="title">Волшебная палочка</div>
+                    </div>
+                    <div class="features-text">
+                        <p>Почувствуйте себя волшебником с Funtome! Воспользуйтесь Волшебной палочкой и превратите сразу всё текстовое сообщение в картинки всего одним нажатием. Автотрансформация, хоть и не приносит фанумов, но творит настоящие чудеса, превращая текст в картинки быстро и весело.</p> 
+                    </div>
+                </div>
+            </div>
+
+            <!--- Text Richt -->
+            <div class="features-iteam">
+                <div class="features-content mr50">
+                    <div class="features-title">
+                        <div class="number-photo">
+                            <img class="number" src="img/funtome-features/08.png" alt="">
+                        </div>
+                        <div class="title">Яйцесмайлы</div>
+                    </div>
+                    <div class="features-text mb30">
+                        <p>Добавьте ещё больше эмоций в общение с помощью  наших неповторимых Яйцесмайлов! Яйцесмайлы – оригинальные смайлы, выражающие популярные и мемные эмоции и выражения.</p> 
+                    </div>
+                </div>
+                <div class="features-photo">
+                    <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                </div> 
+            </div>
+
         </div>
     </div>
+
+    <div class="container-center">
+        
+        <div class="conditiuns">
+          <a href="#" class="style-conditions mr50">Условия пользования</a>
+          <a href="#" class="style-conditions">Политика конфиденциальности</a>
+        </div>
+
+      </div>
 
     <!--- Footer -->
     <footer>
