--- a/funtome_features.html
+++ b/funtome_features.html
@@ -66,21 +66,21 @@
 
         <!--- Intro -->
 
-        <div class="intro">
+        <div class="container">
 
-            <div class="container-center">
+            <div class="intro-features">
 
-                <div class="intro-container">
+                <div class="features-container">
 
-                    <div class="intro-content">
-                        <div class="content-title">
+                    <div class="features-banner-title">
+                        <div class="content-title-features">
                             <!-- <p class="text-title">features</p> -->
                             <img src="img/funtome-features/features-title.png" alt="">
                         </div>
                         <div class="contetnt-subtitle">
                             <p class="text-red">Funtome Messenger</p>
                         </div>
-                        <div class="content-text">Узнайте о самых полезных и необычных функциях приложения!</div>
+                        <div class="content-text">Узнайте о самых полезных и необычных<br> функциях приложения!</div>
 
                     </div>
                 </div>
