--- a/index.html
+++ b/index.html
@@ -242,19 +242,19 @@
         </div>
 
         <div class="icon-social-footer">
-          <a href="#" class="mr30">
-            <img src="img/icon/inst.png" alt="">
+          <a href="#" class="icon-footer mr30">
+              <img src="img/icon/inst.png" alt="">
           </a>
-          <a href="#" class="mr30">
-            <img src="img/icon/facebook.png" alt="">
+          <a href="#" class="icon-footer mr30">
+              <img src="img/icon/facebook.png" alt="">
           </a>
-          <a href="#" class="mr30">
-            <img src="img/icon/vk.png" alt="">
+          <a href="#" class="icon-footer mr30">
+              <img src="img/icon/vk.png" alt="">
           </a>
-          <a href="#">
-            <img src="img/icon/youtube.png" alt="">
+          <a href="#" class="icon-footer">
+              <img src="img/icon/youtube.png" alt="">
           </a>
-        </div>
+      </div>
 
       </div>
     </div> <!-- end footer -->
