--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a href="funtome_features.html">особенности</a>
             </li>
             <li class="link-blog">
-              <a href="#">блог</a>
+              <a href="funtome_blog.html">блог</a>
             </li>
             <li class="link-help">
               <a href="#">поддержка</a>
@@ -65,64 +65,64 @@
       </div>
     </header>
 
+    <!--- Intro -->
+    <div class="intro">
+      <div class="container-center">
+
+        <div class="intro-container">
+
+          <div class="intro-content">
+            <div class="content-title">
+              <img src="img/funtome_title.png" alt="">
+            </div>
+            <div class="contetnt-subtitle">
+              <p class="text-subtitle">сделай общение</p>
+              <p class="text-red">ярче!</p>
+            </div>
+            <div class="content-text">Устанавливайте Funtome бесплатно и общайтесь, превращая обычный текст или целые
+            фразы в оригинальные картинки.</div>
+            <div class="butt-mobile">
+              <a href="#" class="butt-instal butt-green mr30">
+                <img src="img/butt/butt_app.png" alt="">
+              </a>
+              <a href="#" class="butt-instal butt-green">
+                <img src="img/butt/butt_google.png" alt="">
+              </a>
+            </div>
+
+          </div>
+          <div class="intro-photo">
+            <img class="intro-photo-size" src="img/intro_photo_group.png" alt="">
+          </div>
+        </div>
+
+      </div>
+
+      <div class="icon-social">
+        <a href="#" class="icon-fixet">
+          <img src="img/icon/inst.png" alt="">
+        </a>
+        <a href="#" class="icon-fixet">
+          <img src="img/icon/facebook.png" alt="">
+        </a>
+        <a href="#" class="icon-fixet">
+          <img src="img/icon/vk.png" alt="">
+        </a>
+        <a href="#">
+          <img src="img/icon/youtube.png" alt="">
+        </a>
+      </div>
+
+      <div class="intro-banner">
+        <img src="img/header-photo_desc.jpg" alt="">
+      </div>
+
+    </div> <!-- end Intro -->
+
+    <!-- Content block -->
     <div class="content-block">
 
-      <!--- Intro -->
-      <div class="intro">
-        <div class="container-center">
-
-          <div class="intro-container">
-
-            <div class="intro-content">
-              <div class="content-title">
-                <img src="img/funtome_title.png" alt="">
-              </div>
-              <div class="contetnt-subtitle">
-                <p class="text-subtitle">сделай общение</p>
-                <p class="text-red">ярче!</p>
-              </div>
-              <div class="content-text">Устанавливайте Funtome бесплатно и общайтесь, превращая обычный текст или целые
-                фразы в оригинальные картинки.</div>
-              <div class="butt-mobile">
-                <a href="#" class="butt-instal butt-green mr30">
-                  <img src="img/butt/butt_app.png" alt="">
-                </a>
-                <a href="#" class="butt-instal butt-green">
-                  <img src="img/butt/butt_google.png" alt="">
-                </a>
-              </div>
-
-            </div>
-            <div class="intro-photo">
-              <img class="intro-photo-size" src="img/intro_photo_group.png" alt="">
-            </div>
-          </div>
-
-        </div>
-
-        <div class="icon-social">
-          <a href="#" class="icon-fixet">
-            <img src="img/icon/inst.png" alt="">
-          </a>
-          <a href="#" class="icon-fixet">
-            <img src="img/icon/facebook.png" alt="">
-          </a>
-          <a href="#" class="icon-fixet">
-            <img src="img/icon/vk.png" alt="">
-          </a>
-          <a href="#">
-            <img src="img/icon/youtube.png" alt="">
-          </a>
-        </div>
-
-        <div class="intro-banner">
-          <img src="img/header-photo_desc.jpg" alt="">
-        </div>
-
-      </div> <!-- end Intro -->
-
       <div class="slider">
-
         <div class="container-center">
           <div class="form-slider">
             <img class="form-style" src="img/icon/form.svg" alt="">
@@ -154,10 +154,10 @@
                     </p>
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
-        </div>
+              </div> <!-- end slide -->
+            </div> <!-- end owl-slider-1 -->
+          </div> <!-- end form-slider -->
+        </div> <!-- end container-center -->
 
       </div> <!-- End Slider -->
 
@@ -254,7 +254,7 @@
           <a href="#" class="icon-footer">
               <img src="img/icon/youtube.png" alt="">
           </a>
-      </div>
+        </div>
 
       </div>
     </div> <!-- end footer -->
