--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="/js/owlCarousel/owl.theme.default.css">
 
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/media/media.css">
+  <!-- <link rel="stylesheet" href="css/media/media.css"> -->
 
 </head>
 
@@ -65,201 +65,204 @@
       </div>
     </header>
 
-    <!--- Intro -->
-    <div class="intro">
-      <div class="container-center">
+    <div class="content">
 
-        <div class="intro-container">
+      <!--- Intro -->
+      <div class="intro">
+        <div class="container-center">
 
-          <div class="intro-content">
-            <div class="content-title">
-              <img src="img/funtome_title.png" alt="">
+          <div class="intro-container">
+
+            <div class="intro-content">
+              <div class="content-title">
+                <img src="img/funtome_title.png" alt="">
+              </div>
+              <div class="contetnt-subtitle">
+                <p class="text-subtitle">сделай общение</p>
+                <p class="text-red">ярче!</p>
+              </div>
+              <div class="content-text">Устанавливайте Funtome бесплатно и общайтесь, превращая обычный текст или целые
+              фразы в оригинальные картинки.</div>
+              <div class="butt-mobile">
+                <a href="#" class="butt-instal butt-green mr30">
+                  <img src="img/butt/butt_app.png" alt="">
+                </a>
+                <a href="#" class="butt-instal butt-green">
+                  <img src="img/butt/butt_google.png" alt="">
+                </a>
+              </div>
+
             </div>
-            <div class="contetnt-subtitle">
-              <p class="text-subtitle">сделай общение</p>
-              <p class="text-red">ярче!</p>
+            <div class="intro-photo">
+              <img class="intro-photo-size" src="img/intro_photo_group.png" alt="">
             </div>
-            <div class="content-text">Устанавливайте Funtome бесплатно и общайтесь, превращая обычный текст или целые
-            фразы в оригинальные картинки.</div>
+          </div>
+
+        </div>
+
+        <div class="icon-social">
+          <a href="#" class="icon-fixet">
+            <img src="img/icon/inst.png" alt="">
+          </a>
+          <a href="#" class="icon-fixet">
+            <img src="img/icon/facebook.png" alt="">
+          </a>
+          <a href="#" class="icon-fixet">
+            <img src="img/icon/vk.png" alt="">
+          </a>
+          <a href="#">
+            <img src="img/icon/youtube.png" alt="">
+          </a>
+        </div>
+
+        <div class="intro-banner">
+          <img src="img/header-photo_desc.jpg" alt="">
+        </div>
+
+      </div> <!-- end Intro -->
+
+      <!-- Content block -->
+      <div class="content-block">
+
+        <div class="slider">
+          <div class="container-center">
+            <div class="form-slider">
+              <img class="form-style" src="img/icon/form.svg" alt="">
+              <div class="owl-slider-1">
+                <div id="slider_1" class="owl-carousel owl-theme-1">
+                  <div class="slide">
+                    <img class="photo-style" src="img/mouse.png" alt="">
+                    <div class="form-text">
+                      <p class="text-first">
+                        Встречайте <span class="green">анимированные</span> паки Funtome!
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="slide">
+                    <img class="photo-style" src="img/mouse.png" alt="">
+                    <div class="form-text">
+                      <p class="text-first">
+                        Встречайте <span class="green">анимированные</span> паки Funtome!
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="slide">
+                    <img class="photo-style" src="img/mouse.png" alt="">
+                    <div class="form-text">
+                      <p class="text-first">
+                        Встречайте <span class="green">анимированные</span> паки Funtome!
+                      </p>
+                    </div>
+                  </div>
+                </div> <!-- end slide -->
+              </div> <!-- end owl-slider-1 -->
+            </div> <!-- end form-slider -->
+          </div> <!-- end container-center -->
+
+        </div> <!-- End Slider -->
+
+        <section class="video">
+          <img src="img/video_photo.jpg" alt="">
+        </section>
+
+        <div class="container-center">
+          <div class="title-instal">
+            <h3 class="text-instal">Онлайн мессенджер для Android и iOS устройств</h3>
+            <span class="arrow-next"></span>
+            <div class="header-instal">
+              <a href="#"><img class="sms-apple" src="img/icon/sms-apple.png" alt="" /></a>
+              <a href="#"><img class="sms-google" src="img/icon/sms-google.png" alt="" /></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="container-center">
+          <div class="info-funtome">
+            <div class="title-info">О приложении</div>
+            <div class="text-info">
+              <p class="style-text">Funtome – это абсолютно новый бесплатный мессенджер, меняющий привычное представление
+                об общении. Теперь делиться яркими и живыми эмоциями стало еще проще. Новый графический мессенджер Funtome
+                поддерживает функцию переписки картинками.</p>
+              <p class="style-text">Графика вместо текста. Теперь можно выйти из тесных рамок смайлов и эмоджи и
+                визуализировать все!</p>
+              <p class="style-text">Скачивайте и общайтесь. Отправляйте новые картинки, получайте награды, удивляйте
+                друзей и используйте своё воображение по максимуму!</p>
+            </div>
+          </div>
+        </div>
+
+        <section class="info-photo">
+          <img class="info-photo-size" src="img/info_photo.jpg" alt="">
+        </section>
+
+        <div class="container-center">
+          <div class="detalis-text">
+            <div class="text">Подробнее в разделе </div>
+            <span class="arrow-next"></span>
+            <a href="#" class="butt butt-green">
+              <span class="butt-text">Особенности</span>
+            </a>
+          </div>
+
+          <div class="conditiuns">
+            <a href="#" class="style-conditions mr50">Условия пользования</a>
+            <a href="#" class="style-conditions">Политика конфиденциальности</a>
+          </div>
+        </div>
+      </div> <!-- content-block end -->
+    </div>
+
+    <footer>
+      <div class="footer">
+        <div class="container footer-container">
+  
+          <div class="footer-funtome">
+            <div class="footer-icon mr25">
+              <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
+            </div>
+            <div class="funtome-text">Funtome Messenger</div>
+            <span class="arrow-next mr68"></span>
             <div class="butt-mobile">
-              <a href="#" class="butt-instal butt-green mr30">
+              <a href="#" class="butt-instal butt-green-border mr30">
                 <img src="img/butt/butt_app.png" alt="">
               </a>
-              <a href="#" class="butt-instal butt-green">
+              <a href="#" class="butt-instal butt-green-border">
                 <img src="img/butt/butt_google.png" alt="">
               </a>
             </div>
-
           </div>
-          <div class="intro-photo">
-            <img class="intro-photo-size" src="img/intro_photo_group.png" alt="">
+  
+          <div class="footer-contact">
+            <div class="copyright">2018-2019 UAB"FlowTech Pro"</div>
+            <div class="address">Лауру 36F, Вильнюс, Литва</div>
+            <div class="footer-contacts">
+              <a href="info@funtome.com" class="mail">info@funtome.com</a>
+            </div>
           </div>
-        </div>
-
-      </div>
-
-      <div class="icon-social">
-        <a href="#" class="icon-fixet">
-          <img src="img/icon/inst.png" alt="">
-        </a>
-        <a href="#" class="icon-fixet">
-          <img src="img/icon/facebook.png" alt="">
-        </a>
-        <a href="#" class="icon-fixet">
-          <img src="img/icon/vk.png" alt="">
-        </a>
-        <a href="#">
-          <img src="img/icon/youtube.png" alt="">
-        </a>
-      </div>
-
-      <div class="intro-banner">
-        <img src="img/header-photo_desc.jpg" alt="">
-      </div>
-
-    </div> <!-- end Intro -->
-
-    <!-- Content block -->
-    <div class="content-block">
-
-      <div class="slider">
-        <div class="container-center">
-          <div class="form-slider">
-            <img class="form-style" src="img/icon/form.svg" alt="">
-            <div class="owl-slider-1">
-              <div id="slider_1" class="owl-carousel owl-theme-1">
-                <div class="slide">
-                  <img class="photo-style" src="img/mouse.png" alt="">
-                  <div class="form-text">
-                    <p class="text-first">
-                      Встречайте <span class="green">анимированные</span> паки Funtome!
-                    </p>
-                  </div>
-                </div>
-
-                <div class="slide">
-                  <img class="photo-style" src="img/mouse.png" alt="">
-                  <div class="form-text">
-                    <p class="text-first">
-                      Встречайте <span class="green">анимированные</span> паки Funtome!
-                    </p>
-                  </div>
-                </div>
-
-                <div class="slide">
-                  <img class="photo-style" src="img/mouse.png" alt="">
-                  <div class="form-text">
-                    <p class="text-first">
-                      Встречайте <span class="green">анимированные</span> паки Funtome!
-                    </p>
-                  </div>
-                </div>
-              </div> <!-- end slide -->
-            </div> <!-- end owl-slider-1 -->
-          </div> <!-- end form-slider -->
-        </div> <!-- end container-center -->
-
-      </div> <!-- End Slider -->
-
-      <section class="video">
-        <img src="img/video_photo.jpg" alt="">
-      </section>
-
-      <div class="container-center">
-        <div class="title-instal">
-          <h3 class="text-instal">Онлайн мессенджер для Android и iOS устройств</h3>
-          <span class="arrow-next"></span>
-          <div class="header-instal">
-            <a href="#"><img class="sms-apple" src="img/icon/sms-apple.png" alt="" /></a>
-            <a href="#"><img class="sms-google" src="img/icon/sms-google.png" alt="" /></a>
+  
+          <div class="icon-social-footer">
+            <a href="#" class="icon-footer mr30">
+                <img src="img/icon/inst.png" alt="">
+            </a>
+            <a href="#" class="icon-footer mr30">
+                <img src="img/icon/facebook.png" alt="">
+            </a>
+            <a href="#" class="icon-footer mr30">
+                <img src="img/icon/vk.png" alt="">
+            </a>
+            <a href="#" class="icon-footer">
+                <img src="img/icon/youtube.png" alt="">
+            </a>
           </div>
+  
         </div>
-      </div>
-
-      <div class="container-center">
-        <div class="info-funtome">
-          <div class="title-info">О приложении</div>
-          <div class="text-info">
-            <p class="style-text">Funtome – это абсолютно новый бесплатный мессенджер, меняющий привычное представление
-              об общении. Теперь делиться яркими и живыми эмоциями стало еще проще. Новый графический мессенджер Funtome
-              поддерживает функцию переписки картинками.</p>
-            <p class="style-text">Графика вместо текста. Теперь можно выйти из тесных рамок смайлов и эмоджи и
-              визуализировать все!</p>
-            <p class="style-text">Скачивайте и общайтесь. Отправляйте новые картинки, получайте награды, удивляйте
-              друзей и используйте своё воображение по максимуму!</p>
-          </div>
-        </div>
-      </div>
-
-      <section class="info-photo">
-        <img class="info-photo-size" src="img/info_photo.jpg" alt="">
-      </section>
-
-      <div class="container-center">
-        <div class="detalis-text">
-          <div class="text">Подробнее в разделе </div>
-          <span class="arrow-next"></span>
-          <a href="#" class="butt butt-green">
-            <span class="butt-text">Особенности</span>
-          </a>
-        </div>
-
-        <div class="conditiuns">
-          <a href="#" class="style-conditions mr50">Условия пользования</a>
-          <a href="#" class="style-conditions">Политика конфиденциальности</a>
-        </div>
-      </div>
-    </div> <!-- content-block end -->
+      </div> <!-- end footer -->
+  
+    </footer>
 
   </div> <!-- End App -->
-
-  <footer>
-    <div class="footer">
-      <div class="container footer-container">
-
-        <div class="footer-funtome">
-          <div class="footer-icon mr25">
-            <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
-          </div>
-          <div class="funtome-text">Funtome Messenger</div>
-          <span class="arrow-next mr68"></span>
-          <div class="butt-mobile">
-            <a href="#" class="butt-instal butt-green-border mr30">
-              <img src="img/butt/butt_app.png" alt="">
-            </a>
-            <a href="#" class="butt-instal butt-green-border">
-              <img src="img/butt/butt_google.png" alt="">
-            </a>
-          </div>
-        </div>
-
-        <div class="footer-contact">
-          <div class="copyright">2018-2019 UAB"FlowTech Pro"</div>
-          <div class="address">Лауру 36F, Вильнюс, Литва</div>
-          <div class="footer-contacts">
-            <a href="info@funtome.com" class="mail">info@funtome.com</a>
-          </div>
-        </div>
-
-        <div class="icon-social-footer">
-          <a href="#" class="icon-footer mr30">
-              <img src="img/icon/inst.png" alt="">
-          </a>
-          <a href="#" class="icon-footer mr30">
-              <img src="img/icon/facebook.png" alt="">
-          </a>
-          <a href="#" class="icon-footer mr30">
-              <img src="img/icon/vk.png" alt="">
-          </a>
-          <a href="#" class="icon-footer">
-              <img src="img/icon/youtube.png" alt="">
-          </a>
-        </div>
-
-      </div>
-    </div> <!-- end footer -->
-
-  </footer>
 
 
   <script src="/js/jquery.min.js"></script>
