--- a/funtome_blog.html
+++ b/funtome_blog.html
@@ -193,16 +193,12 @@
                         </div>
 
                         <div class="news-section"> <!-- New section -->
-                            <img class="img-news" src="img/funtome-blog/news/news-1-min.png" alt="">
+                            <img class="img-news" src="img/funtome-blog/news/news-3-min.png" alt="">
 
-                            <div class="news-title">Хайп в молодежном сленге - простыми словами</div>
+                            <div class="news-title">РОФЛ? Что это?</div>
                             <div class="news-subtitle">
-                                <p class="style-text-blog bold">Начнем с того, что сетевой сленг очень популярен</p>
-                                <p class="style-text-blog">«Хайп» уже больше двух лет занимает лидирующие позиции в
-                                    списках главных неологизмов. Да, Интернет здесь сыграл ключевую роль. Через него
-                                    вообще буквально все распространяется как вирус. Говоря о языке, сегодня границы
-                                    между сетью и реальным миром уже сложно обозначить.</p>
-                                <p class="style-text-blog bold">Хайп – как это...</p>
+                                <p class="style-text-blog bold">Откуда берутся эти странные слова</p>
+                                <p class="style-text-blog">«РОФЛ!!!» Или: «Да ты РОФЛИШЬ!» – фразы, которые сегодня видел и слышал практически каждый. Сегодня все чаще в интернет-пространстве и не только встречаются странные слова, о значении которых мы можем только догадываться. Мир постоянно меняется и язык, как средство его восприятия и выражения, тоже не стоит на месте. Множество новых слов приходит из английского: таски, дедлайны, чекать. Особенно активно англоязычные...</p>
                             </div>
                             <div class="news-like-data">
                                 <div class="like">
@@ -220,18 +216,13 @@
                         </div>
 
                         <div class="news-section"> <!-- New section-->
-                            <img class="img-news" src="img/funtome-blog/news/news-2-min.png" alt="">
+                            <img class="img-news" src="img/funtome-blog/news/news-4-min.png" alt="">
 
-                            <div class="news-title">Что такое флекс</div>
+                            <div class="news-title">ЭМОДЗИ или ЭМОДЖИ?</div>
                             <div class="news-subtitle">
-                                <p class="style-text-blog bold">Пофлексим?</p>
-                                <p class="style-text-blog">В музыкальной индустрии постоянно рождаются новые слова и
-                                    значения. Фанаты и артисты изобретательны: стэн, боп, сис, шэйд. Язык подвижен,
-                                    поэтому скоро многое оказывается за пределами родного комьюнити и пытается прижиться
-                                    так же, как это удалось «перформансу» или «хайпу».</p>
-                                <p class="style-text-blog bold">Происхождение и значение флекса</p>
-                                <p class="style-text-blog">Слово происходит от английского flex – «сгибать,
-                                    гнуть»...</p>
+                                <p class="style-text-blog bold">Немного предыстории</p>
+                                <p class="style-text-blog">Все началось с картинки. Ведь действительно, в самом начале, еще до того, как придумать письмо, люди рисовали свои послания. Визуализировать – это естественно для человека. Картинка – это возможность кратко, но емко передать сообщение, изобразить его.
+                                В цифровом мире все началось с эмоций. Хотелось придать эмоциональную окраску тому, что мы говорим, показать, что чувствуем в тот или иной момент, «улыбнуться»...</p>
                             </div>
                             <div class="news-like-data">
                                 <div class="like">
@@ -249,16 +240,13 @@
                         </div>
 
                         <div class="news-section"> <!-- New section -->
-                            <img class="img-news" src="img/funtome-blog/news/news-1-min.png" alt="">
+                            <img class="img-news" src="img/funtome-blog/news/news-5-min.png" alt="">
 
-                            <div class="news-title">Хайп в молодежном сленге - простыми словами</div>
-                            <div class="news-subtitle">
-                                <p class="style-text-blog bold">Начнем с того, что сетевой сленг очень популярен</p>
-                                <p class="style-text-blog">«Хайп» уже больше двух лет занимает лидирующие позиции в
-                                    списках главных неологизмов. Да, Интернет здесь сыграл ключевую роль. Через него
-                                    вообще буквально все распространяется как вирус. Говоря о языке, сегодня границы
-                                    между сетью и реальным миром уже сложно обозначить.</p>
-                                <p class="style-text-blog bold">Хайп – как это...</p>
+                            <div class="news-title">ЧСВ</div>
+                            <div class="news-subtitle">                                
+                                <p class="style-text-blog">Здравствуйте, уважаемые читатели! Сегодня мы с вами разберем, что такое ЧСВ и как быть, если сетевое пространство с детской непосредственностью советует то понижать его, то повышать.</p>
+                                <p class="style-text-blog bold">Понятие и философия ЧСВ</p>    
+                                <p class="style-text-blog">ЧСВ расшифровывается как «чувство собственной важности» либо «чувство собственного величия» – последний вариант носит более негативный эмоциональный окрас, но обе расшифровки равноценны...</p>
                             </div>
                             <div class="news-like-data">
                                 <div class="like">
@@ -276,18 +264,12 @@
                         </div>
 
                         <div class="news-section"> <!-- New section-->
-                            <img class="img-news" src="img/funtome-blog/news/news-2-min.png" alt="">
+                            <img class="img-news" src="img/funtome-blog/news/news-6-min.png" alt="">
 
-                            <div class="news-title">Что такое флекс</div>
+                            <div class="news-title">Кэшбэк – отличный способ получать прибыль от покупок</div>
                             <div class="news-subtitle">
-                                <h3 class="style-text-blog bold">Пофлексим?</h3>
-                                <p class="style-text-blog">В музыкальной индустрии постоянно рождаются новые слова и
-                                    значения. Фанаты и артисты изобретательны: стэн, боп, сис, шэйд. Язык подвижен,
-                                    поэтому скоро многое оказывается за пределами родного комьюнити и пытается прижиться
-                                    так же, как это удалось «перформансу» или «хайпу».</p>
-                                <h3 class="style-text-blog bold">Происхождение и значение флекса</h3>
-                                <p class="style-text-blog">Слово происходит от английского flex – «сгибать,
-                                    гнуть»...</p>
+                                <p class="style-text-blog">Вот уже несколько лет подряд на просторах интернета и в банковской сфере мы часто видим слово «кэшбэк». Что это такое, кому и зачем он выгоден, мы разберемся в этой статье.</p>
+                                <p class="style-text-blog">Термин cashback пришел из английского языка и буквально обозначает «возврат наличных денег» на счет платежной карты либо на счет аккаунта, если речь идет о кэшбэк-сервисе. При оплате товаров или услуг при...</p>
                             </div>
                             <div class="news-like-data">
                                 <div class="like">
@@ -304,7 +286,7 @@
                             </div>
                         </div>
 
-                    </div> <!-- News ineam end -->
+                    </div> <!-- news-iteam end -->
                 </div> <!-- Container end -->
             </div> <!-- News end -->
 
