--- a/index.html
+++ b/index.html
@@ -118,7 +118,12 @@
             </div>
 
             <div class="intro-banner">
-                <img src="img/header-photo_desc.jpg" alt="">
+                <img src="img/header-photo_desc.jpg" 
+                alt="">
+                <!-- style="height: 1000px;
+                max-width: initial;
+                width: auto;" -->
+                
             </div>
 
         </div> <!-- end Intro -->
