Add section pages

--- a/funtome_blog.html
+++ b/funtome_blog.html
@@ -291,6 +291,28 @@
             </div> <!-- News end -->
 
             <div class="container-center">
+                <div class="section-pages">
+                    <ul class="pages">
+                        <li class="pages-style">
+                            <a href="#">1</a>
+                        </li>
+                        <li class="pages-style active">
+                            <a href="#">2</a>
+                        </li>
+                        <li class="pages-style">
+                            <a href="#">3</a>
+                        </li>
+                        <li class="pages-style">
+                            <a href="#">...</a>
+                        </li>
+                        <li class="pages-style">
+                            <a href="#">9</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="container-center">
                 <div class="conditiuns">
                     <a href="#" class="style-conditions mr50">Условия пользования</a>
                     <a href="#" class="style-conditions">Политика конфиденциальности</a>
