--- a/funtome_blog.html
+++ b/funtome_blog.html
@@ -291,6 +291,7 @@
             </div> <!-- News end -->
 
             <div class="container-center">
+                
                 <div class="section-pages">
                     <ul class="pages">
                         <li class="pages-style">
@@ -311,6 +312,15 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="container">
+                <div class="popular-articles">
+                    <p class="news-title-first">Популярные новости</p>
+                    <div class="slider-popular">
+                        
+                    </div>
+                </div>
+            </div>    
 
             <div class="container-center">
                 <div class="conditiuns">
