--- a/funtome_blog.html
+++ b/funtome_blog.html
@@ -315,9 +315,20 @@
 
             <div class="container">
                 <div class="popular-articles">
-                    <p class="news-title-first">Популярные новости</p>
-                    <div class="slider-group">
-                        <div id="slider-2" class="owl-carousel owl-theme">
+                    <p class="news-title-first">Популярные статьи</p>
+                    <div class="owl-slider-2">
+                        <div id="slider-2" class="owl-carousel owl-theme-2">
+                            <div class="slider-popular">
+                                <img src="img/funtome-blog/slider/slider-1.png" alt="">
+                                
+                            </div>
+                            <div class="slider-popular">
+                                <img src="img/funtome-blog/slider/slider-1.png" alt="">
+                            </div>
+                            <div class="slider-popular">
+                                <img src="img/funtome-blog/slider/slider-1.png" alt="">
+                            </div>
+
                             <div class="slider-popular">
                                 <img src="img/funtome-blog/slider/slider-1.png" alt="">
                             </div>
@@ -400,6 +411,7 @@
     $(document).ready(function () {
         $("#slider-2").owlCarousel({
             'items': 3,
+            'slideBy': 3,
             'loop': true,
             'margin': 29,
             'autoplayHoverPause': true,
